# what-to-wear-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
what_to_wear/: .env.example  main.py
what_to_wear/api/: api.py  routes.py
what_to_wear/api/controllers/: auth_controller.py  recommendation_controller.py  test.py  weather_controller.py
what_to_wear/api/database/: db.py
what_to_wear/api/models/: current_weather.py
what_to_wear/api/models/db_models/: user.py
what_to_wear/api/models/schemas/: current_weather.py  forecast_weather.py  mistral_llm_response.py  weather_request_params.py
what_to_wear/api/services/: auth_service.py  recommendation_service.py  weather_service.py
what_to_wear/api/utils/: constants.py  llm_utils.py  utils.py
what_to_wear/tests/: test_auth_controller.py  test_auth_service.py  test_main.py  test_recommendation_controller.py  test_recommendation_service.py  test_test.py  test_weather_controller.py  test_weather_service.py
what_to_wear/tests/mock_data/: mock_current_weather_data.json  mock_current_weather_response.json  mock_forecast_weather_response.json
what_to_wear/utils/: constants.py  utils.py
